# project-strategy-game

./: .gitignore  Cargo.toml  README.md
client/: README.md  package.json  webpack.plugins.ts
client/src/: index.ts  wasm.ts
core/: Cargo.toml  README.md
core/src/: hex_map.rs  lib.rs  prng.rs  simulation.rs
core/src/hex_map/: coordinates.rs  layers.rs  tile.rs
core/src/hex_map/layers/: dynamic.rs  natural.rs  world.rs
core/src/simulation/: buildings.rs  economy.rs  fog.rs  ids.rs  infrastructure.rs  logistics.rs  military.rs  nations.rs  people.rs  properties.rs  resources.rs  settlements.rs
core/src/simulation/people/: leaders.rs  population.rs
procgen/: Cargo.toml  README.md
procgen/src/: lib.rs  map.rs
scripting/: Cargo.toml
wasm_bridge/: Cargo.toml
wasm_bridge/src/: core.rs  lib.rs  procedural.rs  wasm_utils.rs
