[package]
name = "project_x_wasm_bridge"
description = "Project X: WASM bridge crate for use in the client, with full Typescript support."
version = "0.0.1"
authors = ["pierreyoda <pierreyoda@users.noreply.github.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true # Link-Time Optimisation: faster and smaller code but longer compilation

[dependencies]
# internal:
project_x_core = { path = "../core" }
project_x_procgen = { path = "../procgen" }
# external:
wasm-bindgen = "0.2.95"

# enabled in debug only due to required infrastructure (std::fmt, std::panicking)
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
